--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="Gallery">
 
           <div class="GalleryImg">
-            <img src="images/img1.jpg" alt="photo" />
+            <img src="images/img1.png.jpg" alt="photo" />
           </div>
 
           <div class="GalleryImg">
