--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="content">
       <!-- Center Content Starts -->
       <div class="center-content">
-        <img src="images/college.jpg" class="img-css" alt="">
+        <img src="images/college.png" class="img-css" alt="">
         <br>
         <center><a class="paybtn" href="javascript:void(0)">Book Appointment</a></center>
 
