--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="Gallery">
 
           <div class="GalleryImg">
-            <img src="images/logo.png" alt="photo" />
+            <img src="images/photo.png" alt="photo" />
           </div>
 
           <div class="GalleryImg">
