--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Gallery Starts -->
         <h2>Gallery</h2>
         <div class="Gallery">
-
+            <div class="GalleryImg">
             <img src="images/img1.jpg" alt="photo"/>
           </div>
 
