--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Gallery</h2>
         <div class="Gallery">
             <div class="GalleryImg">
-            <img src="images/img1.jpg" alt="photo"/>
+            <img src="images/imge(1).jpg" alt="photo"/>
           </div>
 
           <div class="GalleryImg">
