--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
         <h2>Gallery</h2>
         <div class="Gallery">
             <div class="GalleryImg">
-            <img src="images/imge(1).jpg" alt="photo"/>
+            <img src="images/imge(1).jpeg" alt="photo"/>
           </div>
 
           <div class="GalleryImg">
-            <img src="images/img2.jpg" alt="photo"/>
+            <img src="images/img2.jpeg" alt="photo"/>
           </div>
 
           <div class="GalleryImg">
-            <img src="images/img3.jpg" alt="photo"/>
+            <img src="images/img3.jpeg" alt="photo"/>
           </div>
 
           <div class="GalleryImg">
-            <img src="images/img4.jpg" alt="photo"/>
+            <img src="images/img4.jpeg" alt="photo"/>
           </div>
 
         </div>
